5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1590_825.log
== SUBMITION (2019-03-31 22:05:01) 
-- CODE:
import match

r= float(input("raio:"))
a= math.pi*(r**2)
v= 4//3*math.pi*(r***3)

print(round(a,3))
print(round(b,3))
-- EXECUTION TIME:
0.17194
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 5
    v= 4//3*math.pi*(r***3)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:05:08) 
-- CODE:
import match

r= float(input("raio:"))
a= math.pi*(r**2)
v= 4//3*math.pi*(r***3)

print(round(a,3))
print(round(b,3))
-- ERROR:
File "XXXX", line 5
    v= 4//3*math.pi*(r***3)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:05:40) 
-- CODE:
import match

r= float(input("raio:"))
a= math.pi*(r**2)
v= 4/3 * math.pi * (r***3)

print(round(a,3))
print(round(b,3))
-- EXECUTION TIME:
0.16911
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 5
    v= 4/3 * math.pi * (r***3)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:05:46) 
-- CODE:
import match

r= float(input("raio:"))
a= math.pi*(r**2)
v= 4/3 * math.pi * (r***3)

print(round(a,3))
print(round(b,3))
-- ERROR:
File "XXXX", line 5
    v= 4/3 * math.pi * (r***3)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:06:20) 
-- CODE:
import match

r = float(input("raio:"))
a = math.pi*(r**2)
v = (4/3)* math.pi * (r***3)

print(round(a,3))
print(round(b,3))
-- EXECUTION TIME:
0.195336
-- ERROR:
  File "/home/codebench/codes/1590/825/main.py", line 5
    v = (4/3)* math.pi * (r***3)
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:06:23) 
-- CODE:
import match

r = float(input("raio:"))
a = math.pi*(r**2)
v = (4/3)* math.pi * (r***3)

print(round(a,3))
print(round(b,3))
-- ERROR:
File "XXXX", line 5
    v = (4/3)* math.pi * (r***3)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:06:45) 
-- CODE:
import match

r = float(input("raio:"))
a = math.pi*(r**2)
v = (4/3) * math.pi * (r***3)

print(round(a,3))
print(round(b,3))
-- ERROR:
File "XXXX", line 5
    v = (4/3) * math.pi * (r***3)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:07:12) 
-- CODE:
import match

r = float(input("raio:"))
a = math.pi*(r**2)
v = (4/3) * math.pi * (r**3)

print(round(a,3))
print(round(b,3))
-- EXECUTION TIME:
0.127408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 1, in <module>
    import match
ImportError: No module named 'match'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:07:15) 
-- CODE:
import match

r = float(input("raio:"))
a = math.pi*(r**2)
v = (4/3) * math.pi * (r**3)

print(round(a,3))
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import match
ModuleNotFoundError: No module named 'match'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:07:40) 
-- CODE:
import math

r = float(input("raio:"))
a = math.pi*(r**2)
v = (4/3) * math.pi * (r**3)

print(round(a,3))
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(b,3))
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:08:00) 
-- CODE:
import math

r = float(input("raio:"))
a = math.pi*(r**2)
v = (4/3) * math.pi * (r**3)

print(round(a,3))
print(round(v,3))
-- EXECUTION TIME:
0.157901
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:08:04) 
-- CODE:
import math

r = float(input("raio:"))
a = math.pi*(r**2)
v = (4/3) * math.pi * (r**3)

print(round(a,3))
print(round(v,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:08:27) 
-- CODE:
import math

r = float(input("raio:"))
a = math.pi*(r**2)
v = (4/3) * math.pi * (r**3)

print(round(a,3))
print(round(v,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 10:57:20) 
-- CODE:
import math

r=float(input("raio:"))

A= math.pi*(r**2)
V=4/3*(math.pi)*(r**3)

print(round(A,3))
print(round(V,3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 10:57:27) 
-- CODE:
import math

r=float(input("raio:"))

A= math.pi*(r**2)
V=4/3*(math.pi)*(r**3)

print(round(A,3))
print(round(V,3))
-- EXECUTION TIME:
0.146975
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
